--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
 body{
     background: teal;
 }
+h1 {
+    font-size: 40px;
+}
+.topic-header {
+    font-size: 25px;
+}
+.blog-title {
+    background-color: green
+}
